tests/dataset/tpc-ds/compiler/kotlin/q33.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q33.kt:66:19: error: unresolved reference: concat
val union_sales = concat(run {
                  ^
